FPVTL-2044 - Update test for Respondents.